--- a/core/index.html
+++ b/core/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Babylon.js Template</title>
+    <title>Quaternion</title>
 
     <style>
         html, body {
@@ -39,6 +39,7 @@
             var main = new BABYLON.Main(scene);
             main.createMeshes();
             main.setupPhysics();
+            main.setupActions();
             
             engine.runRenderLoop(function() {
                 scene.render();
