--- a/core/index.html
+++ b/core/index.html
@@ -31,6 +31,7 @@
     <canvas id="renderCanvas"></canvas>
 
     <script type="text/javascript">
+    //main.start();
         var canvas = document.getElementById("renderCanvas");
         var engine = new BABYLON.Engine(canvas);
 
