--- a/core/index.html
+++ b/core/index.html
@@ -23,30 +23,15 @@
     <!-- LIBS -->
     <script src="../libs/cannon.js" type="text/javascript"></script>
     <script src="../libs/babylon.max.js" type="text/javascript"></script>
-    <script src="main.js" type="text/javascript"></script>
-
+    <script src="core.js" type="text/javascript"></script>
 </head>
 <body>
 
     <canvas id="renderCanvas"></canvas>
 
     <script type="text/javascript">
-    //main.start();
-        var canvas = document.getElementById("renderCanvas");
-        var engine = new BABYLON.Engine(canvas);
-
-        BABYLON.SceneLoader.Load("../assets/", "level0.babylon", engine, function (scene) {
-//debugger;
-            var main = new BABYLON.Main(scene);
-            main.createMeshes();
-            main.setupPhysics();
-            main.setupCollisions();
-            main.setupActions();
-            
-            engine.runRenderLoop(function() {
-                scene.render();
-            });
-        });
+        var main = new BABYLON.Main();
+        main.run();
     </script>
 
 </body>
