--- a/index.html
+++ b/index.html
@@ -21,18 +21,12 @@
     </style>
 
     <!-- LIBS -->
-    <script src="../libs/cannon.js" type="text/javascript"></script>
-    <script src="../libs/babylon.max.js" type="text/javascript"></script>
-    <script src="core.js" type="text/javascript"></script>
+    <script src="libs/cannon.js" type="text/javascript"></script>
+    <script src="libs/babylon.max.js" type="text/javascript"></script>
+    <script data-main="core/game.js" src="node_modules/requirejs/require.js"></script>
 </head>
 <body>
 
     <canvas id="renderCanvas"></canvas>
-
-    <script type="text/javascript">
-        var main = new BABYLON.Main();
-        main.run();
-    </script>
-
 </body>
 </html>
